# karps

./: .gitignore  Makefile  README.md  build.sbt
cpython_test/pytest/: ChangeLog.md  Makefile  package.yaml  pytest.cabal  test.py
cpython_test/pytest/src/: Lib.hs
doc/paper/: Makefile  scratch.md  title.txt
eta/: ChangeLog.md  karps-eta.cabal
eta/src/Proto/Karps/Proto/: Types.hs
haskell/: README.md  karps.cabal  stack.yaml
haskell/notebooks/: KrapshDagDisplay.hi  KrapshDisplays.hi
haskell/notebooks/.ipynb_checkpoints/: 00 Intro-checkpoint.ipynb  06 Column operations-checkpoint.ipynb  07 Spark program introspection-checkpoint.ipynb
haskell/notebooks/kraps/: __init__.py  session.py  types.py  values.py
haskell/notebooks/kraps/pyspark/: types.py
haskell/src-server/: Main.hs
haskell/src-server/Spark/Server/: Registry.hs  Transform.hs
haskell/src/Proto/Karps/Proto/: ApiInternal.hs  ApiInternal_Fields.hs  Computation.hs  Graph.hs  Graph_Fields.hs  Interface.hs  Profiling.hs  Profiling_Fields.hs  Row.hs  Std.hs  Std_Fields.hs  StructuredTransform.hs  StructuredTransform_Fields.hs  Types.hs
haskell/src/Proto/Tensorflow/Core/Framework/: AttrValue.hs  Graph.hs  Graph_Fields.hs  NodeDef.hs  NodeDef_Fields.hs
haskell/src/Spark/Common/: ComputeDag.hs  DAGFunctions.hs  DAGStructures.hs  NodeBuilder.hs  NodeFunctions.hs  NodeStructures.hs  OpFunctions.hs  OpStructures.hs  Paths.hs  PathsUntyped.hs  ProtoUtils.hs  RowGenerics.hs  RowGenericsFrom.hs  RowStructures.hs  RowUtils.hs  StructuresInternal.hs  TypesFunctions.hs  TypesGenerics.hs  TypesStructures.hs  Utilities.hs
haskell/src/Spark/Compiler/: BrainFunctions.hs  BrainStructures.hs  Client.hs
haskell/src/Spark/Compiler/Units/: Caching.hs
haskell/src/Spark/Core/: Column.hs  ColumnFunctions.hs  Context.hs  Dataset.hs  Functions.hs  JavaExports.hs  Row.hs  StructuresInternal.hs  Try.hs  Types.hs
haskell/src/Spark/Core/Internal/: AggregationFunctions.hs  Arithmetics.hs  ArithmeticsImpl.hs  BrainFunctions.hs  BrainStructures.hs  Caching.hs  CachingUntyped.hs  CanRename.hs  Client.hs  ColumnFunctions.hs  ColumnStructures.hs  ComputeDag.hs  ContextIOInternal.hs  ContextInteractive.hs  ContextInternal.hs  ContextStructures.hs  DAGFunctions.hs  DatasetFunctions.hs  DatasetStd.hs  DatasetStructures.hs  Display.hs  FunctionsInternals.hs  Groups.hs  Joins.hs  LocalDataFunctions.hs  OpFunctions.hs  OpStructures.hs  Paths.hs  Projections.hs  ProtoUtils.hs  Pruning.hs  RowGenerics.hs  RowGenericsFrom.hs  RowStructures.hs  RowUtils.hs  StructureFunctions.hs  StructuredBuilder.hs  StructuredFlattening.hs  TypesStructures.hs  Utilities.hs
haskell/src/Spark/Core/InternalStd/: Aggregation.hs  Column.hs  Dataset.hs  Filter.hs  Observable.hs
haskell/src/Spark/IO/: Inputs.hs
haskell/src/Spark/IO/Internal/: InputGeneric.hs  InputStructures.hs  Json.hs  OutputCommon.hs  Utils.hs
haskell/test-integration/Spark/Core/: CachingSpec.hs  CollectSpec.hs  ColumnSpec.hs  GroupsSpec.hs  JoinsSpec.hs  PruningSpec.hs  SimpleAddSpec.hs
haskell/test-integration/Spark/IO/: JsonSpec.hs
haskell/test/Spark/Core/: ColumnSpec.hs  DatasetSpec.hs  ProjectionsSpec.hs  RowToSQLSpec.hs  SimpleExamplesSpec.hs  TestUtils.hs  TypesSpec.hs
haskell/test/Spark/Core/Internal/: CachingSpec.hs  DAGFunctionsSpec.hs  GroupsSpec.hs  OpFunctionsSpec.hs  PathsSpec.hs  RowUtilsSpec.hs
haskell2/: karps.cabal  pytest.cabal  stack.yaml
haskell2/src/: Lib.hs  Lib2.hs  Lib3.hs
haskell2/src/Proto/Karps/Proto/: ApiInternal.hs  ApiInternal_Fields.hs  Computation_Fields.hs  Graph.hs  Graph_Fields.hs  Interface.hs  Interface_Fields.hs  Io.hs  Io_Fields.hs  Profiling.hs  Row.hs  Row_Fields.hs  Spark.hs  Spark_Fields.hs  Standard.hs  Standard_Fields.hs  Std.hs  StructuredTransform.hs  Types_Fields.hs
haskell2/src/Spark/Common/: ComputeDag.hs  NodeBuilder.hs  NodeFunctions.hs  NodeStructures.hs  OpFunctions.hs  OpStructures.hs  PathsUntyped.hs  ProtoUtils.hs  RowUtils.hs  StructuresInternal.hs  Try.hs  TypesFunctions.hs  TypesStructuresRepr.hs
haskell2/src/Spark/Compiler/: Compiler.hs  OutputSpark.hs  Structures.hs
haskell2/src/Spark/Standard/: Base.hs  Spark.hs
old/doc/paper/: test.html
old/eta/src/: Main.hs  Primes.hs  Proto  Spark
project/: MyBuild.scala  plugins.sbt  scalapb.sbt
protobuf/karps/proto/: api_internal.proto  graph.proto  interface.proto  spark.proto  standard.proto
protobuf/tensorflow/core/framework/: attr_value.proto
python/: MANIFEST  Pipfile  README.md  setup.py
python/karps/: column.py  computation.py  functions.py  row.py  row.pyi  session.py
python/karps/proto/: api_internal_pb2_grpc.py  interface_pb2.py  interface_pb2_grpc.py  io_pb2.py  profiling_pb2.py  row_pb2.py  structured_transform_pb2.py  types_pb2.py
python/karps2/: __init__.py  objects.py  row.py  session.py  std.py  types.py  utils.py
python/karps2/c_core/: __init__.py
python/karps2/pandas/: __init__.py  std.py
python/karps2/proto/: __init__.py  api_internal_pb2.py  computation_pb2.py  graph_pb2.py  interface_pb2.py  std_pb2.py
python/karps2/proto/karps/proto/: api_internal_pb2.py  computation_pb2.py  graph_pb2.py  interface_pb2.py  io_pb2.py  profiling_pb2.py  row_pb2.py  spark_pb2.py  standard_pb2.py  std_pb2.py  structured_transform_pb2.py  types_pb2.py
python/karps2/spark/: __init__.py  loop.py
python/karps_old/: __init__.py  computation.py  display.py  groups.py  observable.py  spark.py  types.py  utils.py
python/karps_old/functions_std/: base.py  error.py  utils.py
python/notebooks/: Demo 1 - pandas.ipynb  Demo 1-details.ipynb  Demo 1.ipynb  Demo 1b.ipynb  Demo 1c.ipynb  Demo 2 remote.ipynb  Demo 2-details.ipynb  Demo 2.ipynb  Demo 2a.ipynb  Demo 2b.ipynb  Demo 2c.ipynb  Demo 2d.ipynb  Demo 2e.ipynb  Test Simple structured transform.ipynb  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  databricks.ipynb
src/main/protobuf/: computation.proto  graph.proto  interface.proto  io.proto  row.proto  structured_transform.proto  types.proto
src/main/protobuf/karps/proto/: api_internal.proto  graph.proto  (+8 more)
src/main/resources/: log4j.properties
(+58 files in other folders)
