name:                karps
version:             0.2.0.0
synopsis:            Haskell bindings for Spark Dataframes and Datasets
description:         Karps-Haskell is an exploration vehicle for developing safe,
                     scalable and reliable data pipelines over Apache Spark, using
                     the DataFrame API.

                     In order to use it, you must launch Spark with the
                     karps-server module installed.
homepage:            https://github.com/krapsh/kraps-haskell
license:             Apache-2.0
license-file:        LICENSE
author:              krapsh
maintainer:          krapsh@yandex.com
copyright:           2016 Karps-Haskell contributors
category:            Web, Big data
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
                     Spark.Common.ComputeDag,
                     Spark.Common.DAGFunctions,
                     Spark.Common.DAGStructures,
                     Spark.Common.NodeBuilder,
                     Spark.Common.OpFunctions,
                     Spark.Common.OpStructures,
                     Spark.Common.Paths,
                     Spark.Common.PathsUntyped,
                     Spark.Common.ProtoUtils,
                     Spark.Common.RowGenerics,
                     Spark.Common.RowGenericsFrom,
                     Spark.Common.RowStructures,
                     Spark.Common.RowUtils,
                     Spark.Common.StructuresInternal,
                     Spark.Common.Try,
                     Spark.Common.TypesGenerics,
                     Spark.Common.TypesStructures,
                     Spark.Common.TypesStructuresRepr,
                     Spark.Common.TypesFunctions,
                     Spark.Common.Utilities,
                     Spark.Compiler.BrainStructures,
                     Spark.Compiler.BrainFunctions,
                     Spark.Compiler.Client,
                     Spark.Core,
                     Spark.Core.Context,
                     Spark.Core.Column,
                     Spark.Core.ColumnFunctions,
                     Spark.Core.Dataset,
                     Spark.Core.Functions,
                     Spark.Core.Internal.AggregationFunctions,
                     Spark.Core.Internal.Arithmetics,
                     Spark.Core.Internal.ArithmeticsImpl,
                     Spark.Core.Internal.Caching,
                     Spark.Core.Internal.CanRename,
                     Spark.Core.Internal.ColumnFunctions,
                     Spark.Core.Internal.ColumnStructures,
                     Spark.Core.Internal.ContextInteractive,
                     Spark.Core.Internal.ContextInternal,
                     Spark.Core.Internal.ContextIOInternal,
                     Spark.Core.Internal.ContextStructures,
                     Spark.Core.Internal.DatasetFunctions,
                     Spark.Core.Internal.DatasetStd,
                     Spark.Core.Internal.DatasetStructures,
                     Spark.Core.Internal.Groups,
                     Spark.Core.Internal.Joins,
                     Spark.Core.Internal.LocalDataFunctions,
                     Spark.Core.Internal.Projections,
                     Spark.Core.Internal.Pruning,
                     Spark.Core.Internal.StructuredBuilder,
                     Spark.Core.Internal.StructuredFlattening,
                     Spark.Core.Internal.StructureFunctions,
                     Spark.Core.InternalStd.Aggregation,
                     Spark.Core.InternalStd.Column,
                     Spark.Core.InternalStd.Dataset,
                     Spark.Core.InternalStd.Filter,
                     Spark.Core.InternalStd.Observable,
                     Spark.Core.Row,
                     Spark.Core.Types,
                     Spark.IO.Inputs,
                     Proto.Karps.Proto.ApiInternal,
                     Proto.Karps.Proto.ApiInternal_Fields,
                     Proto.Karps.Proto.Computation,
                     Proto.Karps.Proto.Computation_Fields,
                     Proto.Karps.Proto.Graph,
                     Proto.Karps.Proto.Graph_Fields,
                     Proto.Karps.Proto.Interface,
                     Proto.Karps.Proto.Interface_Fields,
                     Proto.Karps.Proto.Io,
                     Proto.Karps.Proto.Io_Fields,
                     Proto.Karps.Proto.Row,
                     Proto.Karps.Proto.Row_Fields,
                     Proto.Karps.Proto.Std,
                     Proto.Karps.Proto.Std_Fields,
                     Proto.Karps.Proto.StructuredTransform,
                     Proto.Karps.Proto.StructuredTransform_Fields,
                     Proto.Karps.Proto.Types,
                     Proto.Karps.Proto.Types_Fields,
                     Proto.Tensorflow.Core.Framework.AttrValue,
                     Proto.Tensorflow.Core.Framework.AttrValue_Fields,
                     Proto.Tensorflow.Core.Framework.Graph,
                     Proto.Tensorflow.Core.Framework.Graph_Fields,
                     Proto.Tensorflow.Core.Framework.NodeDef,
                     Proto.Tensorflow.Core.Framework.NodeDef_Fields


  other-modules:       Spark.Core.Internal.AlgebraStructures,
                       Spark.Core.Internal.CachingUntyped,
                       Spark.Core.Internal.Display,
                       Spark.Core.Internal.FunctionsInternals,
                       Spark.IO.Internal.InputGeneric,
                       Spark.IO.Internal.InputStructures,
                       Spark.IO.Internal.Json,
                       Spark.IO.Internal.OutputCommon
  build-depends:       base >= 4.8.1 && < 5,
                       base16-bytestring,
                       base64-bytestring,
                       binary >= 0.7 && < 0.9,
                       bytestring,
                       call-stack,
                       containers,
                       cryptohash-sha256,
                       data-default,
                       either,
                       exceptions,
                       formatting,
                       hashable,
                       lens-family,
                       microlens,
                       monad-logger,
                       proto-lens >= 0.3 && < 0.4,
                       proto-lens-protoc >= 0.3 && < 0.4,
                       QuickCheck,
                       random,
                       scientific,
                       semigroups,
                       SHA,
                       mtl,
                       text,
                       text-format,
                       transformers,
                       unordered-containers,
                       vector,
                       wreq
  ghc-options:         -Wall
   ---fhpc -O0
--  ghc-options:         -fprof-auto --enable-library-profiling -O0 -- -ddump-deriv -O0 -rtsopts=all
  default-language:    Haskell2010
  extensions:          FlexibleContexts

executable karps-server
  hs-source-dirs:      src-server
  main-is:             Main.hs
  other-modules:       Spark.Server.Registry,
                       Spark.Server.Transform
  default-language:    Haskell2010
  build-depends:       base
                     , bytestring
                     , formatting
                     , karps
                     , lens-family
                     , proto-lens >= 0.2.2
                     , proto-lens-protoc >= 0.2.2
                     , text
                     , scotty
                    --  , cereal
                     , containers
                     , unordered-containers
                     , vector
                     , wai-extra
                     , data-default

test-suite karps-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Spark.Core.ContextSpec,
                       Spark.Core.DatasetSpec,
                       Spark.Core.Internal.CachingSpec,
                       Spark.Core.Internal.LocalDataFunctionsSpec,
                       Spark.Core.Internal.OpFunctionsSpec,
                       Spark.Core.Internal.RowUtilsSpec,
                       Spark.Core.Internal.DAGFunctionsSpec,
                       Spark.Core.Internal.PathsSpec,
                       Spark.Core.Internal.GroupsSpec,
                       Spark.Core.PathSpec,
                       Spark.Core.ProjectionsSpec,
                       Spark.Core.RowToSQLSpec,
                       Spark.Core.TestUtils,
                       Spark.Core.TypesSpec,
                       Spark.Core.ColumnSpec,
                       Spark.Core.SimpleExamplesSpec
  build-depends:       base
                     , bytestring
                     , containers
                     , data-default
                     , formatting
                     , karps
                     , hspec >= 2.0 && < 2.3
                     , text
                     , raw-strings-qq
                     , QuickCheck
                     , vector
  ghc-options:
  -- -fhpc -O0 -Wall -prof
--  ghc-options:         -ddump-deriv -O0 -rtsopts=all -prof -auto-all
  default-language:    Haskell2010

test-suite karps-test-integration
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test-integration
  main-is:             Spec.hs
  other-modules:       Spark.Core.CachingSpec,
                       Spark.Core.CollectSpec,
                       Spark.Core.ColumnSpec,
                       Spark.Core.GroupsSpec,
                       Spark.Core.IntegrationUtilities,
                       Spark.Core.JoinsSpec,
                       Spark.Core.SimpleAddSpec,
                       Spark.Core.PruningSpec,
                       Spark.IO.JsonSpec,
                       Spark.IO.StampSpec
  build-depends:       aeson
                     , base
                     , bytestring
                     , containers
                     , data-default
                     , formatting
                     , karps
                     , hspec >= 2.0 && < 2.4
                     , text
                     , raw-strings-qq
                     , QuickCheck
                     , vector
  ghc-options:
   -- -fhpc -O0 -Wall -rtsopts=all -auto-all
--  ghc-options:         -ddump-deriv -O0 -rtsopts=all -prof -auto-all
  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/krapsh/kraps-haskell
